[gd_scene load_steps=4 format=3 uid="uid://dqy1bxhbsm7xj"]

[ext_resource type="Script" path="res://prog_88a.gd" id="1_jqvpl"]
[ext_resource type="Theme" uid="uid://2sh8kniwmbuq" path="res://Big_Font.tres" id="2_t6x5l"]

[sub_resource type="LabelSettings" id="LabelSettings_qvgpb"]
font_size = 20

[node name="prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqvpl")

[node name="linNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 589.0
offset_bottom = 83.0
theme = ExtResource("2_t6x5l")
placeholder_text = "Number 1"

[node name="linNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 8.0
offset_right = 1143.0
offset_bottom = 83.0
theme = ExtResource("2_t6x5l")
placeholder_text = "Number 2"

[node name="Output" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 98.0
offset_right = 1142.0
offset_bottom = 521.0
text = "Sum: 
Difference: 
Product: 
Abs. Distance: 
Max: 
Min: 
"
label_settings = SubResource("LabelSettings_qvgpb")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 542.0
offset_right = 206.0
offset_bottom = 640.0
theme = ExtResource("2_t6x5l")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 540.0
offset_right = 678.0
offset_bottom = 638.0
theme = ExtResource("2_t6x5l")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 542.0
offset_right = 1142.0
offset_bottom = 640.0
theme = ExtResource("2_t6x5l")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
